--- a/package.json
+++ b/package.json
@@ -8,17 +8,42 @@
     "eject": "expo eject"
   },
   "dependencies": {
+    "@react-native-community/masked-view": "0.1.10",
+    "@react-navigation/drawer": "^5.8.5",
+    "@react-navigation/native": "^5.7.0",
+    "@react-navigation/stack": "^5.7.0",
+    "@reduxjs/toolkit": "^1.4.0",
+    "axios": "^0.19.2",
+    "date-fns": "^2.14.0",
+    "dotenv": "^8.2.0",
     "expo": "~38.0.8",
+    "expo-constants": "^9.1.1",
+    "expo-linear-gradient": "^8.2.1",
     "expo-status-bar": "^1.0.2",
+    "formik": "^2.1.4",
     "react": "~16.11.0",
     "react-dom": "~16.11.0",
     "react-native": "https://github.com/expo/react-native/archive/sdk-38.0.2.tar.gz",
-    "react-native-web": "~0.11.7"
+    "react-native-gesture-handler": "~1.6.0",
+    "react-native-reanimated": "~1.9.0",
+    "react-native-safe-area-context": "~3.0.7",
+    "react-native-screens": "~2.9.0",
+    "react-native-web": "~0.11.7",
+    "react-navigation-header-buttons": "^4.0.2",
+    "react-query": "^2.4.15",
+    "react-redux": "^7.2.0",
+    "yup": "^0.29.1"
   },
   "devDependencies": {
     "@babel/core": "^7.8.6",
+    "@react-native-community/eslint-config": "^2.0.0",
     "@types/react": "~16.9.41",
     "@types/react-native": "~0.62.13",
+    "@types/react-redux": "^7.1.9",
+    "@types/yup": "^0.29.3",
+    "eslint": "^7.4.0",
+    "eslint-config-prettier": "^6.11.0",
+    "prettier": "^2.0.5",
     "typescript": "~3.9.5"
   },
   "private": true
