--- a/package.json
+++ b/package.json
@@ -18,9 +18,11 @@
     "dotenv": "^8.2.0",
     "expo": "~38.0.8",
     "expo-constants": "^9.1.1",
+    "expo-file-system": "~9.0.1",
     "expo-image-picker": "~8.3.0",
     "expo-linear-gradient": "^8.2.1",
     "expo-permissions": "~9.0.1",
+    "expo-sqlite": "~8.2.1",
     "expo-status-bar": "^1.0.2",
     "formik": "^2.1.4",
     "react": "~16.11.0",
