--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "expo-file-system": "~9.0.1",
     "expo-image-picker": "~8.3.0",
     "expo-linear-gradient": "^8.2.1",
+    "expo-location": "~8.2.1",
     "expo-permissions": "~9.0.1",
     "expo-sqlite": "~8.2.1",
     "expo-status-bar": "^1.0.2",
